# BazelBehaviourShowcase

./: README.md  WORKSPACE.bazel  paket.dependencies
FirstPackage/: BUILD.bazel  Program.cs
SecondPackage/: BUILD.bazel  Program.cs
